 * Fix: Fix server-side caching of the icons sprite (Thibaud Colas)
 * Fix: Avoid showing scrollbars in the block picker unless necessary (Babitha Kumari)
 * Fix: Always show Add buttons, guide lines, Move up/down, Duplicate, Delete; in StreamField and Inline Panel (Thibaud Colas)
 * Docs: Add code block to make it easier to understand contribution docs (Suyash Singh)
 * Docs: Add new "Icons" page for icons customisation and reuse across the admin interface (Coen van der Kamp, Thibaud Colas)
 * Docs: Fix broken formatting for MultiFieldPanel / FieldRowPanel permission kwarg docs (Matt Westcott)
 * Docs: Add helpful troubleshooting links and refine wording for getting started with development (Loveth Omokaro)
 * Docs: Ensure search autocomplete overlay on mobile does not overflow the viewport (Ayman Makroo)
 * Docs: Improve documentation for InlinePanel (Vallabh Tiwari)
 * Docs: Add contributor guidelines for building Stimulus Controllers (Thibaud Colas, Loveth Omokaro, LB (Ben) Johnston)
 * Docs: Fix typo in "Extending Draftail" documentation (Hans Kelson)
 * Docs: Clarify `ClusterableModel` requirements for using relations with `RevisionMixin`-enabled models (Sage Abdullah)
 * Maintenance: Removed features deprecated in Wagtail 3.0 and 4.0 (Matt Westcott)
 * Maintenance: Update djhtml (html formatting) library to v 1.5.2 (Loveth Omokaro)
 * Maintenance: Re-enable `strictPropertyInitialization` in tsconfig (Thibaud Colas)
 * Maintenance: Refactor accessibility checker userbar item (Albina Starykova)
 * Maintenance: Removed unused `Page.get_static_site_paths` method (Yosr Karoui)
 * Maintenance: Provisional Django 5.0 compatibility fixes (Sage Abdullah)
 * Maintenance: Add unit tests for `CollapseAll` and `MinimapItem` components (Albina Starykova)
 * Maintenance: Code quality fixes (GLEF1X)
 * Maintenance: Refactor image / document / snippet usage views into a shared generic view (Sage Abdullah)