@@ -81,6 +81,7 @@ Support for adding custom validation logic to StreamField blocks has been formal
  * Fix server-side caching of the icons sprite (Thibaud Colas)
  * Avoid showing scrollbars in the block picker unless necessary (Babitha Kumari)
  * Always show Add buttons, guide lines, Move up/down, Duplicate, Delete; in StreamField and Inline Panel (Thibaud Colas)
+ * Make admin JS i18n endpoint accessible to non-authenticated users (Matt Westcott)
 
 ### Documentation
 
