@@ -61,6 +61,7 @@ Changelog
  * Fix: Fix server-side caching of the icons sprite (Thibaud Colas)
  * Fix: Avoid showing scrollbars in the block picker unless necessary (Babitha Kumari)
  * Fix: Always show Add buttons, guide lines, Move up/down, Duplicate, Delete; in StreamField and Inline Panel (Thibaud Colas)
+ * Fix: Make admin JS i18n endpoint accessible to non-authenticated users (Matt Westcott)
  * Docs: Add code block to make it easier to understand contribution docs (Suyash Singh)
  * Docs: Add new "Icons" page for icons customisation and reuse across the admin interface (Coen van der Kamp, Thibaud Colas)
  * Docs: Fix broken formatting for MultiFieldPanel / FieldRowPanel permission kwarg docs (Matt Westcott)
